@@ -1,107 +1,109 @@
 package vn.hoidanit.jobhunter.service;
 
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
+
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-import vn.hoidanit.jobhunter.domain.User;
-import vn.hoidanit.jobhunter.domain.dto.*;
-import vn.hoidanit.jobhunter.repository.UserRepository;
 
-import java.util.List;
-import java.util.Optional;
+import vn.hoidanit.jobhunter.domain.User;
+import vn.hoidanit.jobhunter.domain.dto.Meta;
+import vn.hoidanit.jobhunter.domain.dto.ResCreateUserDTO;
+import vn.hoidanit.jobhunter.domain.dto.ResUpdateUserDTO;
+import vn.hoidanit.jobhunter.domain.dto.ResUserDTO;
+import vn.hoidanit.jobhunter.domain.dto.ResultPaginationDTO;
+import vn.hoidanit.jobhunter.repository.UserRepository;
 
 @Service
 public class UserService {
 
     private final UserRepository userRepository;
-    private final PasswordEncoder passwordEncoder;
 
-    public UserService(UserRepository userRepository, PasswordEncoder passwordEncoder) {
+    public UserService(UserRepository userRepository) {
         this.userRepository = userRepository;
-        this.passwordEncoder = passwordEncoder;
     }
 
-    public ResultPaginationDTO<List<ResUserDTO>> fetchAllUser(Specification<User> spec, Pageable pageable) {
+    public User handleCreateUser(User user) {
+        return this.userRepository.save(user);
+    }
+
+    public void handleDeleteUser(long id) {
+        this.userRepository.deleteById(id);
+    }
+
+    public User fetchUserById(long id) {
+        Optional<User> userOptional = this.userRepository.findById(id);
+        if (userOptional.isPresent()) {
+            return userOptional.get();
+        }
+        return null;
+    }
+
+    public ResultPaginationDTO fetchAllUser(Specification<User> spec, Pageable pageable) {
         Page<User> pageUser = this.userRepository.findAll(spec, pageable);
-        ResultPaginationDTO<List<ResUserDTO>> rs = new ResultPaginationDTO<>();
-        ResultPaginationDTO.Meta mt = new ResultPaginationDTO.Meta();
+        ResultPaginationDTO rs = new ResultPaginationDTO();
+        Meta mt = new Meta();
 
         mt.setPage(pageable.getPageNumber() + 1);
         mt.setPageSize(pageable.getPageSize());
-        mt.setPageSize(pageUser.getSize());
+
+        mt.setPages(pageUser.getTotalPages());
         mt.setTotal(pageUser.getTotalElements());
 
         rs.setMeta(mt);
 
+        // remove sensitive data
         List<ResUserDTO> listUser = pageUser.getContent()
-                .stream().map(user -> new ResUserDTO(
-                        user.getId(),
-                        user.getName(),
-                        user.getEmail(),
-                        user.getAge(),
-                        user.getGender(),
-                        user.getAddress(),
-                        user.getCreatedAt(),
-                        user.getUpdatedAt()
-                )).toList();
+                .stream().map(item -> new ResUserDTO(
+                        item.getId(),
+                        item.getEmail(),
+                        item.getName(),
+                        item.getGender(),
+                        item.getAddress(),
+                        item.getAge(),
+                        item.getUpdatedAt(),
+                        item.getCreatedAt()))
+                .collect(Collectors.toList());
+
         rs.setResult(listUser);
+
         return rs;
     }
 
-    public User fetchUserById(long userId) throws Exception {
-        Optional<User> userOptional = this.userRepository.findById(userId);
-        if (userOptional.isEmpty()) {
-            throw new Exception("User with id = " + userId + " not found");
+    public User handleUpdateUser(User reqUser) {
+        User currentUser = this.fetchUserById(reqUser.getId());
+        if (currentUser != null) {
+            currentUser.setAddress(reqUser.getAddress());
+            currentUser.setGender(reqUser.getGender());
+            currentUser.setAge(reqUser.getAge());
+            currentUser.setName(reqUser.getName());
+
+            // update
+            currentUser = this.userRepository.save(currentUser);
         }
-        return userOptional.get();
-    }
-
-    public ResCreateUserDTO handleCreateUser(User user) throws Exception {
-        String hashPassword = this.passwordEncoder.encode(user.getPassword());
-        user.setPassword(hashPassword);
-
-        boolean isEmailExisted = this.userRepository.existsByEmail(user.getEmail());
-
-        if (isEmailExisted) {
-            throw new Exception("Email " + user.getEmail() + " đã tồn tại, vui lòng sử dụng email khác.");
-        }
-
-        User savedUser = this.userRepository.save(user);
-
-        return this.convertToResCreateUserDTO(savedUser);
-    }
-
-    public User handleUpdateUser(User user) throws Exception {
-        User currentUser = this.fetchUserById(user.getId());
-
-        currentUser.setName(user.getName());
-        currentUser.setGender(user.getGender());
-        currentUser.setAge(user.getAge());
-        currentUser.setAddress(user.getAddress());
-
-        return this.userRepository.save(currentUser);
-    }
-
-    public void handleDeleteUser(long userId) {
-        this.userRepository.deleteById(userId);
+        return currentUser;
     }
 
     public User handleGetUserByUsername(String username) {
-        Optional<User> userOptional = this.userRepository.findByEmail(username);
-        return userOptional.orElse(null);
+        return this.userRepository.findByEmail(username);
+    }
+
+    public boolean isEmailExist(String email) {
+        return this.userRepository.existsByEmail(email);
     }
 
     public ResCreateUserDTO convertToResCreateUserDTO(User user) {
         ResCreateUserDTO res = new ResCreateUserDTO();
         res.setId(user.getId());
-        res.setName(user.getName());
         res.setEmail(user.getEmail());
-        res.setGender(user.getGender());
+        res.setName(user.getName());
         res.setAge(user.getAge());
-        res.setAddress(user.getAddress());
         res.setCreatedAt(user.getCreatedAt());
+        res.setGender(user.getGender());
+        res.setAddress(user.getAddress());
         return res;
     }
 
@@ -109,32 +111,35 @@ public class UserService {
         ResUpdateUserDTO res = new ResUpdateUserDTO();
         res.setId(user.getId());
         res.setName(user.getName());
-        res.setEmail(user.getEmail());
-        res.setGender(user.getGender());
         res.setAge(user.getAge());
-        res.setAddress(user.getAddress());
         res.setUpdatedAt(user.getUpdatedAt());
+        res.setGender(user.getGender());
+        res.setAddress(user.getAddress());
         return res;
     }
 
     public ResUserDTO convertToResUserDTO(User user) {
         ResUserDTO res = new ResUserDTO();
         res.setId(user.getId());
-        res.setName(user.getName());
         res.setEmail(user.getEmail());
-        res.setGender(user.getGender());
+        res.setName(user.getName());
         res.setAge(user.getAge());
-        res.setAddress(user.getAddress());
-        res.setCreatedAt(user.getCreatedAt());
         res.setUpdatedAt(user.getUpdatedAt());
+        res.setCreatedAt(user.getCreatedAt());
+        res.setGender(user.getGender());
+        res.setAddress(user.getAddress());
         return res;
     }
 
     public void updateUserToken(String token, String email) {
         User currentUser = this.handleGetUserByUsername(email);
-        if(currentUser != null) {
+        if (currentUser != null) {
             currentUser.setRefreshToken(token);
             this.userRepository.save(currentUser);
         }
+    }
+
+    public User getUserByRefreshTokenAndEmail(String token, String email) {
+        return this.userRepository.findByRefreshTokenAndEmail(token, email);
     }
 }
